--- a/rose.html
+++ b/rose.html
@@ -9,7 +9,8 @@
 <body>
     <div class="container">
         <div class="letter">
-            <h1>For X, I hope you like it :)</h1>
+            <h1>For Jana, I hope you like it :)</h1>
+            <h1>From AX.</h1>
         </div>
         <div class="rose">
             <div class="flower">
